[tool.poetry]
name = "cpggen"
version = "1.0.9"
description = "Generate CPG for multiple languages for use with joern"
authors = ["Team AppThreat <cloud@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "cpggen"}]
homepage = "https://github.com/AppThreat/cpggen"
repository = "https://github.com/AppThreat/cpggen"
keywords = ["joern", "code analysis", "static analysis", "cpg", "code property graph"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
exclude = ["contrib", "tests"]

[tool.poetry.scripts]
cpggen = 'cpggen.cli:main'
cpg = 'cpggen.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
rich = "^13.3.5"
gitpython = "^3.1.31"
quart = "^0.18.4"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
