[tool.poetry]
name = "cpgfrontend"
version = "0.1.0"
description = "A sample CPG frontend in python"
authors = ["Prabhu Subramanian <prabhu@appthreat.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "cpgfrontend"}]

[tool.poetry.scripts]
cpgfe = 'cpgfrontend.cli:main'
cpgfrontend-cli = 'cpgfrontend.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
betterproto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
